# examples

./: README.md
basic-ops/: .gitignore  Dockerfile  README.md  ukc.config.template
caddy2.7-go1.21/: Kraftfile  README.md
chromium-cdp/: README.md  deploy.sh
chromium-cdp/test/: README.md  cdp-screenshot.py  pyproject.toml
debian-ssh/: Dockerfile  README.md  wrapper.sh
dragonflydb/: README.md
duckdb-go1.21/: Kraftfile  README.md
expressjs4.18-node21/: README.md
feature-change-instance-cmd/: .gitignore  Dockerfile  Kraftfile  README.md  app.config  http_server_args.c
flask-redis/: README.md
github-webhook-node/: Kraftfile  README.md
grafana/: Kraftfile  README.md
haproxy/: Kraftfile  README.md
http-java21/: README.md
http-node25/: README.md
httpserver-boost1.74-g++13.2/: README.md
httpserver-boost1.74-gpp13.2/: README.md
httpserver-bun/: Kraftfile  README.md
httpserver-c-debug/: Dockerfile  Kraftfile  README.md  wrapper.sh
httpserver-dotnet10.0/: Kraftfile  README.md
httpserver-elixir1.16/: Dockerfile  Kraftfile  README.md  mix.exs
httpserver-erlang26.2/: Kraftfile  README.md
httpserver-expressjs4.18-node21/: Kraftfile  README.md
httpserver-flask-redis/: Kraftfile  README.md
httpserver-g++13.2/: README.md
httpserver-gcc13.2/: Kraftfile  README.md
httpserver-go1.21/: Kraftfile  README.md
httpserver-go1.22-redis/: README.md
httpserver-gpp13.2/: README.md
httpserver-java17-spring-petclinic/: Dockerfile  Kraftfile  README.md
httpserver-java17-springboot3.2.x/: README.md
httpserver-java17-springboot3.5.x/: Dockerfile  (+2 more)
(+261 files in other folders)
