[tool.poetry]
name = "cdp-test"
version = "0.1.0"
description = "Test CDP (Chrome DevTools Protocol)"
authors = ["razvand"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "*"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
aiodns = "^3.2.0"
pylint = "^3.2.7"
pytest = "^8.3.3"

[tool.black]
line-length = 100
